# kohonen-som

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  examples.py  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
data/: sample_data.csv
models/: my_model.pkl  trained_model.pkl  trained_som.pkl
notebooks/: kohonen.ipynb  test.ipynb
som/: __init__.py  callbacks.py  config.py  core.py  distance.py  observability.py  visualization.py
tests/: conftest.py  test_api.py  test_callbacks.py  test_cli.py  test_config.py  test_core.py  test_distance.py
