[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohonen-som"
version = "0.1.0"
description = "A comprehensive, production-ready implementation of Self-Organizing Maps"
requires-python = ">=3.8"

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "gunicorn>=21.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=3.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.20",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
all = [
    "kohonen-som[dev,notebook]",
]

[project.scripts]
som-cli = "cli:main"


[tool.hatch.build.targets.wheel]
packages = ["som"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
]
